--- a/02_internet_la_web_y_requests.ipynb
+++ b/02_internet_la_web_y_requests.ipynb
@@ -68,8 +68,13 @@
    "source": [
     "## Localizadores Uniformes de Recursos (*URL*).\n",
     "\n",
-    "Es posible acceder a un recurso disponble en Internet mediante los \"Localizadores Uniformes de Recursos, o *URL* por sus siglas en inglés. \n",
-    "\n",
+    "Es posible acceder a un recurso disponble en Internet mediante los \"Localizadores Uniformes de Recursos, o *URL* por sus siglas en inglés. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Estructura de una *URL*.\n",
     "\n",
     "Una *URL* presenta la siguiente estructura general: \n",
@@ -77,18 +82,18 @@
     "Para un recurso que requiere de autenticación:\n",
     " \n",
     "```\n",
-    "<protocolo>://<usuario>:<contraseña>@<anfitrión>:<puerto>/<ruta>?<parámetro 1>&<parámetro 2>&...&<parámetro n>\n",
+    "<esquema>://<usuario>:<contraseña>@<anfitrión>:<puerto>/<ruta>?<consultas>\n",
     "```\n",
     "\n",
     "Para un recurso que no requiere de autenticación:\n",
     " \n",
     "```\n",
-    "<protocolo>://<anfitrión>:<puerto>/<ruta>?<parámetro 1>&<parámetro 2>&...&<parámetro n>\n",
+    "<esquema>://<anfitrión>:<puerto>/<ruta>?<consultas>\n",
     "```\n",
     "\n",
     "Donde:\n",
     "\n",
-    "* ```<protocolo>``` es el protocolo que se utilizará para acceder al recurso.\n",
+    "* ```<esquema>``` es el protocolo o medio que se utilizará para acceder a un recurso.\n",
     "    * Para *HTTP* se indica ```http```.\n",
     "    * Para *HTTPS* se indica ```https```.\n",
     "* ```<usuario>``` es el nombre del usuario con el que se accederá al recurso en el caso de que el acceso requiera de autenticación.\n",
@@ -98,9 +103,22 @@
     "    * *HTTP* utiliza el puerto ```80``` por defecto.\n",
     "    * *HTTPS* utiliza el puerto ```443``` por defecto.\n",
     "* ```<ruta>``` es la ruta donde se encuentra localizado el recurso dentro del servidor.\n",
-    "* ```<parámetro n>``` es un par ```<identificador>=<valor>``` que da cierta información que podría ser procesada por el servidor.\n",
+    "* ```<consulta>``` es una sucesión de parámtestros que pueden ser procesados por el sistema anfitrión."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estructura de una consulta (query).\n",
     "\n",
-    "\n"
+    "Las consultas son una sucesión de parámetros ```<nombre>=<valor>``` separados por el caracter ```&``` de la siguiente forma:\n",
+    "\n",
+    "```\n",
+    "<nombre 1>=<valor 1>&<nombre 2>=<valor 2>&...&<nombre n>=<valor m>\n",
+    "```\n",
+    "\n",
+    "Los parámetros no se utilizan para localizar un recurso. Los parámetros datos que pueden ser procesados por el sistema anfitrión."
    ]
   },
   {
@@ -361,7 +379,7 @@
    "source": [
     "### Estructura de un mensaje de *HTTP*.\n",
     "\n",
-    "Los mensajes de *HTTP* son conjuntos de datos trasnsmitidos en formato binario en codificación [*ASCII*](https://es.wikipedia.org/wiki/ASCII).\n",
+    "Los mensajes de *HTTP* son conjuntos de datos transsmitidos en formato binario en codificación [*ASCII*](https://es.wikipedia.org/wiki/ASCII).\n",
     "\n",
     "Tanto las peticiones como las respuestas tiene una estructura compuesta primordialmente por:\n",
     "\n",
@@ -447,7 +465,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "!pip install requests"
@@ -455,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +520,7 @@
    "source": [
     "#### Argumentos que pueden ser ingresados a las funciones de métodos.\n",
     "\n",
-    "* ```params``` al que se le asigna un objeto de tipo ```dict``` con pares correspondientes a los parámetros que se le añaden a una *URL*.\n",
+    "* ```params``` al que se le asigna un objeto de tipo ```dict``` con pares correspondientes a los parámetros de la consulta que se le añaden a una *URL*.\n",
     "* ```header``` al que se le asigna un objeto de tipo ```dict``` con pares correspondientes a campos de encabezados, los cuales sustituirían a los campos de encabezaddos que usa ```requests``` por defecto.\n",
     "* ```data``` al que se le asigna un objeto que corresponde a los datos que serán enviados al servidor. Los datos son enviados en formato binario.\n",
     "* ```json``` al que se le asigna un objeto de tipo ```dict``` cuyos datos serán enviados en formato *JSON*.\n",
@@ -513,7 +533,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* Se utilizará la función ```requests.get()``` en la *URL* https://coder.mx para abir una conexión enviando una petición ```GET```  y el objeto resultante será nombrado ```sitio```."
+    "* Se utilizará la función ```requests.get()``` en la *URL* https://www.pythonista.io/cursos/py101 para abir una conexión enviando una petición ```GET```  y el objeto resultante será nombrado ```sitio```."
    ]
   },
   {
@@ -522,7 +542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sitio = requests.get(\"https://coder.mx\") "
+    "sitio = requests.get(\"https://www.pythonista.io/cursos/p101\")"
    ]
   },
   {
@@ -665,6 +685,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sitio.content"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -745,7 +774,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "Se utilizará la función ```requests.get()``` para acceder a la *URL* https://pythonista.io  enviando una petición con el método ```GET```. Se desplegarán los siguientes datos guardados en el objeto resultante.\n",
+    "Se utilizará la función ```requests.get()``` para acceder a la *URL* http://pythonista.io  enviando una petición con el método ```GET```. Se desplegarán los siguientes datos guardados en el objeto resultante.\n",
     "\n",
     "* El mensaje de estado resultante.\n",
     "* Los encabezados del mensaje de respuesta."
@@ -761,7 +790,8 @@
    "source": [
     "with requests.get(\"http://pythonista.io\") as sitio:\n",
     "    print(sitio.status_code)\n",
-    "    print(sitio.headers)"
+    "    print(sitio.headers)\n",
+    "    print(sitio.url)"
    ]
   },
   {
@@ -895,7 +925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se utilizará la función ```requests.post``` para enviar una carga de datos a la *URL* \"https://httpbin.org/post, la cual es capaz de procesar peticiones utilizando el método ```POST``` de *HTTP*.\n",
+    "* A continuación se utilizará la función ```requests.post``` para enviar una carga de datos a la *URL* https://httpbin.org/post, la cual es capaz de procesar peticiones utilizando el método ```POST``` de *HTTP*.\n",
     "* La carga de datos se se enviará en formato *JSON*.\n",
     "* Al objeto resultante se le dará el nombre ```respuesta```."
    ]
@@ -1007,7 +1037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
