--- a/05_urls_y_funciones_de_vista.ipynb
+++ b/05_urls_y_funciones_de_vista.ipynb
@@ -40,29 +40,32 @@
    "source": [
     "## Los scripts ```urls.py```.\n",
     "\n",
-    "Estos scripts son usados por *Django* para relacionar una *URL* con una función de vista.\n",
-    "\n",
-    "Es posible desplegar scripts ```urls.py``` tanto para el proyecto como para cada aplicación."
+    "Los scripts ```urls.py``` permiten definir una serie de patrones de *URL* y relacionar cada patrón con una funcion de vista o con otro script de este mismo tipo."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configuración del script ```urls.py``` de un proyecto.\n",
+    "### Configuración del script ```urls.py``` raíz de un proyecto.\n",
     "\n",
-    "Los proyectos de *Django* siempre deben de hacer referencia a al menos un script ```urls.py``` el cual se importaría como un módulo y a partir del cual pueden ser mapeadas las *URLs* del proyecto y de sus aplicaciones.\n",
+    "Un proyecto de *Django* debe de tener al menos un script ```urls.py``` a partir del cual es posible mapear todas las *URLs* de dicho poyecto y de sus aplicaciones. \n",
     "\n",
-    "La localización de este script es definda con la variable ```ROOT_URLCONF``` del script ```settings.py``` del proyecto."
+    "La localización de este script es definida con la variable ```ROOT_URLCONF``` del script ```settings.py``` del proyecto."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ejemplo:**\n",
-    "\n",
-    "* Las siguientes celdas desplegarán el valor de la variable ```ROOT_URLCONF``` del módulo ```tutorial.tutorial.settings```."
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda importará el módulo ```settings``` del paquete ```tutorial.tutorial```."
    ]
   },
   {
@@ -72,6 +75,13 @@
    "outputs": [],
    "source": [
     "from tutorial.tutorial import settings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Las siguiente celda regresará el valor de ```ROOT_URLCONF``` del proyecto ```tutorial```."
    ]
   },
   {
@@ -87,9 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El script ```urls.py``` de un proyecto.\n",
-    "\n",
-    "El script ```urls.py``` del proyecto ```tutorial``` se localiza en ```tutorial/tutorial/urls.py``` y tiene un contenido similar al siguiente: \n",
+    "* El script ```urls.py``` del proyecto ```tutorial``` se localiza en ```tutorial/tutorial/urls.py``` y fue generado automáicamente al crear el proyecto ```tutorial```. Su contenido es similar a:\n",
     "\n",
     "``` python\n",
     "from django.contrib import admin\n",
@@ -98,15 +106,14 @@
     "urlpatterns = [\n",
     "    path('admin/', admin.site.urls),\n",
     "]\n",
-    "```\n",
-    "\n"
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará el contenido del script ```tutorial/tutorial/urls.py``` el cual fue creado al momento en el que se creó el proyecto ```tutorial```."
+    "* La siguiente celda desplegará el contenido del script ```tutorial/tutorial/urls.py```."
    ]
   },
   {
@@ -124,11 +131,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* El código de este script realiza lo siguiente:\n",
+    "### El objeto  ```urlpatterns``` de los scripts ```urls.py```.\n",
     "\n",
-    "    * Importa la función ```admin()``` del módulo ```django.contrib```.\n",
-    "    * Importa la función ```path()``` del módulo ```django.urls.path```.\n",
-    "    * Define al objeto tipo ```list``` con el nombre ```urlpatterns```."
+    "El objeto ```urlpatterns``` define una lista de reglas para patrones de *URLs*\n",
+    "\n",
+    "```\n",
+    "urlpattern  = [<regla 1>, <regla 2>... <regla 3>]\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<regla i>``` es una regla que relaciona a un patrón definido mediante un objeto del paquete ```django.urls``` y una función de vista.  "
    ]
   },
   {
@@ -137,7 +151,9 @@
    "source": [
     "## El paquete ```django.urls```.\n",
     "\n",
-    "Este paquete contiene a las herramientas que permitirán identificar patrones de *URLs* específicas y ligarlas con  funciones de vista."
+    "Este paquete contiene a las herramientas que permitirán identificar patrones de *URLs* específicas y ligarlas con  funciones de vista.\n",
+    "\n",
+    "https://docs.djangoproject.com/en/3.0/ref/urls/"
    ]
   },
   {
@@ -154,7 +170,7 @@
     "Donde:\n",
     "\n",
     "* ```<patrón>``` corresponde a un patrón de *URL*.\n",
-    "* ```<función>``` corresponde a una función o  a un método que será invocado. \n",
+    "* ```<función>``` corresponde a una función o  a un método de vista que será invocado. \n",
     "* ```<kwargs>``` corresponde a argumentos ```clave=valor```.\n",
     "* ```<nombre>``` es el nombre que se le dará a esta relación (opcional).\n"
    ]
@@ -165,9 +181,9 @@
    "source": [
     "### La función ```django.urls.include()```.\n",
     "\n",
-    "En los lenguajes de programación como en el caso de *C*, se utliza la palabra clave *include* cuando se desea importar algún módulo de forma similar a la palabra reservada de Python ```import```. \n",
+    "En los lenguajes de programación como en el caso de *C*, se utliza la palabra *include* cuando se desea importar algún módulo de forma similar a la palabra reservada de Python ```import```. \n",
     "\n",
-    "En este caso, la función ```django.urls.include()``` permite importar un script con una estructura de un script ```urls.py``` localizado en otra ruta como si fuera un módulo dentro de un paquete.\n",
+    "En este caso, la función ```django.urls.include()``` permite importar un script ```urls.py``` localizado en otro sitio del proyecto como si fuera un módulo.\n",
     "\n",
     "``` python\n",
     "django.urls.include('<patrón>', include('<módulo>')\n",
@@ -177,15 +193,6 @@
     "\n",
     "* ```<patrón>``` corresponde a un patrón de *URL*.\n",
     "* ```<módulo>``` corresponde la localización de un módulo con la estructura de un script ```urls.py```. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### La lista ```urlpatterns```.\n",
-    "\n",
-    "El nombre ```urlpatterns``` corresponde a un objeto de tipo ```list```, el cual puede contener una colección de funciones ```django.urls.path()```."
    ]
   },
   {
@@ -207,7 +214,7 @@
     "\n",
     "Para mayores referencias sobre el paquete ```django.contrib```, se puede consultar la siguiente liga: \n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/contrib/"
+    "https://docs.djangoproject.com/en/3.0/ref/contrib/"
    ]
   },
   {
@@ -218,7 +225,7 @@
     "\n",
     "Este paquete contiene un conjunto de herramientas capaces de desplegar una aplicación de administración de un proyecto de *Django*.\n",
     "\n",
-    "La documentación de este paquete puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/contrib/admin/\n",
+    "La documentación de este paquete puede ser consultada en https://docs.djangoproject.com/en/3.0/ref/contrib/admin/\n",
     "\n",
     "**Notas:**\n",
     "* Aún cuando esta la aplicación de administración es habilitada automáticamente al momento en el que se crea un proyecto, puede ser un recurso opcional.\n",
@@ -229,8 +236,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejemplo ilustrativo sobre el uso de los scripts ```urls.py```.\n",
-    "\n",
+    "* En entornos Linux y MacOS X."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplos:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A continuación se crearán las reglas de patrones de *URLs* del proyecto ```tutorial``` y de la aplicación ```tutorial/main```."
    ]
   },
@@ -238,8 +262,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configuración del script ```tutorial/tutorial/urls.py```.\n",
-    "\n",
     "El script ```src/05/tutorial_urls.py``` contiene el siguiente código:\n",
     "\n",
     "``` python\n",
@@ -400,16 +422,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mapeo de patrones de *URLs* con funciones de vista.\n",
+    "## Funciones o métodos de vista.\n",
     "\n",
     "Una vez que un cliente envía una petición a una *URL* gestionada por el servidor de *Django* ocurre lo siguiente:\n",
     "\n",
     "* El servidor verifica que la *URL* coincida con alguno de los patrones definidos en los scripts ```urls.py```. \n",
-    "* En caso de que exista una coincidencia, ocurrir;a lo siguiente:\n",
+    "* En caso de que exista una coincidencia, ocurrirá lo siguiente:\n",
     "    * El srrvidor creará un objeto ```request``` a partir de la petición.\n",
     "    * El servidor  ejecutará la función de vista ligada al patron de *URL*, ingresando al objeto ```request``` como primer argumento. \n",
     "    * La función de vista deberá de regresar un objeto ```response```. Dicho objeto será utilizado por el servidor para transmitir una respuesta al cliente que hizo la petición.\n",
     "* En caso de que no existiera un patrón que coincida con la *URL* de la petición, se gestionará un código de estado ```404```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Las"
    ]
   },
   {
@@ -418,8 +449,15 @@
    "source": [
     "## Los scripts ```views.py```.\n",
     "\n",
-    "*Django* define en su estructura de scripts ```views.py```, los cuales contienen a las funciones de vista que gestionarán las peticiones hechas a las *URLs* a las que están ligadas."
+    "Los scripts ```views.py```, los cuales contienen a las funciones de vista que gestionarán las peticiones hechas a las *URLs* a las que están ligadas."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -641,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
