--- a/06_peticiones_y_respuestas.ipynb
+++ b/06_peticiones_y_respuestas.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "La referencia a estas clases puede ser consultada desde la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/request-response/"
+    "https://docs.djangoproject.com/en/3.0/ref/request-response/"
    ]
   },
   {
@@ -64,7 +64,7 @@
     "\n",
     "* Cuando el servidor de *Django* recibe una petición que coincide con un patrón de *URL*, este instancia un objeto ```request``` y lo ingresa a la función de vista relacionada al patrón de *URL* como primer argumento.\n",
     "* El estado de un objeto ```request``` contiene información de la petición formulada desde un cliente y recibida por el servidor de *Django*.\n",
-    "* Los objetos ```request``` cuentan con métodos que permiten gestionar los datos de las peticiones."
+    "* Los objetos ```request``` cuentan con atributos y métodos que permiten gestionar los datos de las peticiones."
    ]
   },
   {
@@ -85,7 +85,7 @@
     "* ```COOKIES```: contiene un objeto tipo ```dict``` con las cookies enviadas en la petición.\n",
     "* ```FILES```: contiene un diccionario con los datos de los archivos enviados en la petición.\n",
     "* ```META```: Contiene un objeto tipo ```dict``` con una serie de datos los cuales pueden ser consultados en \n",
-    "https://docs.djangoproject.com/en/2.2/ref/request-response/#django.http.HttpRequest.META.\n",
+    "https://docs.djangoproject.com/en/3.0/ref/request-response/#django.http.HttpRequest.META.\n",
     "* ```GET```: contiene un objeto de clase ```django.http.QueryDict``` con los parámetros enviados mediante el método ```GET```.\n",
     "* ```POST```: contiene un objeto de clase ```django.http.QueryDict``` con los parámetros enviados mediante el método ```POST```.\n",
     "\n",
@@ -285,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
