--- a/12_configuracion_de_bases_de_datos.ipynb
+++ b/12_configuracion_de_bases_de_datos.ipynb
@@ -30,7 +30,7 @@
     "* *Oracle*.\n",
     "* *SQLite*.\n",
     "\n",
-    "La referencia completa del usos de bases de datos de *Django* puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/databases/\n",
+    "La referencia completa del usos de bases de datos de *Django* puede ser consultada en https://docs.djangoproject.com/en/3.0/ref/databases/\n",
     "\n",
     "Existen proyectos que pueden soportan la creaciór de modelos en bases de datos NoSQL, tales como [*djongo*](https://nesdis.github.io/djongo/), pero para este curso sólo se estudiarán las bases de datos relacionales soportadas por defecto."
    ]
@@ -41,7 +41,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El paquete *django.backends* contiene los conectores a diversas bases de datos."
+    "El paquete ```django.backends``` contiene los conectores a diversas bases de datos."
    ]
   },
   {
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from django.db import backends as backends"
+    "from django.db import backends"
    ]
   },
   {
@@ -114,7 +114,7 @@
     "El objeto con nombre ```DATABASES``` es de tipo ```dict``` y puede contener más de un acceso a base de datos conforme a la siguiente sintaxis.\n",
     "\n",
     "```\n",
-    "DATABASE = {<dentificador 1>:{<argumentos de configuración>}, \n",
+    "DATABASES = {<dentificador 1>:{<argumentos de configuración>}, \n",
     "            <dentificador 2>:{<argumentos de configuración>},...\n",
     "            ...\n",
     "            <dentificador n>:{<argumentos de configuración>},} \n",
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://docs.djangoproject.com/en/2.2/topics/db/multi-db/"
+    "https://docs.djangoproject.com/en/3.0/topics/db/multi-db/"
    ]
   },
   {
@@ -205,10 +205,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!pip install PyMySQL configparser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install mysql-connector-python"
+    "! sudo apt-get install python3-mysqldb libmysqlclient-dev -y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install mysql-connector-python django-mysql pymysql MySQL-python"
    ]
   },
   {
@@ -235,7 +255,7 @@
     "\n",
     "DATABASES = {'default': {'ENGINE': 'django.db.backends.sqlite3',\n",
     "                         'NAME': os.path.join(BASE_DIR, 'db.sqlite3')},\n",
-    "            'pythonista': {'ENGINE': 'mysql.connector.django',\n",
+    "            'pythonista': {'ENGINE': 'mysql-connector-django',\n",
     "                           'NAME': 'db_django',\n",
     "                           'USER': 'root',\n",
     "                           'PASSWORD': '0p3n5t4ck',\n",
@@ -483,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
