--- a/13_modelos_de_django.ipynb
+++ b/13_modelos_de_django.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "La referencia completa sobre modelos  puede ser consultada en:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/topics/db/models/"
+    "https://docs.djangoproject.com/en/3.0/topics/db/models/"
    ]
   },
   {
@@ -83,7 +83,7 @@
     "from django.db.models import Model\n",
     "...\n",
     "...\n",
-    "<modelo>(Model):\n",
+    "class <Modelo>(Model):\n",
     "    <atributo 1>(<tipo de campo>, <kwargs>)\n",
     "    <atributo 2>(<tipo de campo>, <kwargs>)\n",
     "    ...\n",
@@ -444,7 +444,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%%sql sqlite:///tutorial/db.sqlite3\n",
@@ -476,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
