--- a/16_cliente_api_rest.ipynb
+++ b/16_cliente_api_rest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,25 +27,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta.status_code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'respuesta': [{'numero_de_cuenta': 1221,\n",
+       "   'nombre': 'Pedro',\n",
+       "   'primer_apellido': 'Solis',\n",
+       "   'segundo_apellido': 'Cabañas',\n",
+       "   'carrera': 'Arquitectura',\n",
+       "   'semestre': 3,\n",
+       "   'promedio': 7.8,\n",
+       "   'al_corriente': False},\n",
+       "  {'numero_de_cuenta': 1222,\n",
+       "   'nombre': 'Yolanda',\n",
+       "   'primer_apellido': 'Jiménez',\n",
+       "   'segundo_apellido': 'Lerdo',\n",
+       "   'carrera': 'Actuaría',\n",
+       "   'semestre': 3,\n",
+       "   'promedio': 6.0,\n",
+       "   'al_corriente': False},\n",
+       "  {'numero_de_cuenta': 1223,\n",
+       "   'nombre': 'Ulises',\n",
+       "   'primer_apellido': 'Ramos',\n",
+       "   'segundo_apellido': 'Breña',\n",
+       "   'carrera': 'Sistemas',\n",
+       "   'semestre': 9,\n",
+       "   'promedio': 8.6,\n",
+       "   'al_corriente': True},\n",
+       "  {'numero_de_cuenta': 1224,\n",
+       "   'nombre': 'Mayra Jimena',\n",
+       "   'primer_apellido': 'Cervantes',\n",
+       "   'segundo_apellido': 'Lisama',\n",
+       "   'carrera': 'Derecho',\n",
+       "   'semestre': 12,\n",
+       "   'promedio': 9.2,\n",
+       "   'al_corriente': True}]}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,62 +107,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "404"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta.status_code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'numero_de_cuenta': 1223,\n",
+       " 'nombre': 'Ulises',\n",
+       " 'primer_apellido': 'Ramos',\n",
+       " 'segundo_apellido': 'Breña',\n",
+       " 'carrera': 'Sistemas',\n",
+       " 'semestre': 9,\n",
+       " 'promedio': 8.6,\n",
+       " 'al_corriente': True}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datos ={'nombre':'Ramiro', 'primer_apellido':'Salas', 'segundo_apellido':'Pérez',\n",
-    "        'carrera':'Derecho', 'semestre':1, 'promedio':8, 'al_corriente':True,}"
+    "datos ={'nombre':'Julian', 'primer_apellido':'Pérez',\n",
+    "        'carrera':'Arquitectura', 'semestre':1, 'promedio':8, 'al_corriente':True,}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta = requests.post(\"http://localhost:8000/api/1227\", data=datos)"
+    "respuesta = requests.post(\"http://localhost:8000/api/1228\", data=datos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta.status_code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nombre': 'Julian',\n",
+       " 'primer_apellido': 'Pérez',\n",
+       " 'carrera': 'Arquitectura',\n",
+       " 'semestre': '1',\n",
+       " 'promedio': '8',\n",
+       " 'al_corriente': 'True',\n",
+       " 'numero_de_cuenta': '1228',\n",
+       " 'segundo_apellido': ''}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,18 +229,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta.status_code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'estado': 'eliminado'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta.json()"
    ]
@@ -159,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
