--- a/17_plantillas_de_django.ipynb
+++ b/17_plantillas_de_django.ipynb
@@ -475,10 +475,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La función ```django.shortcuts.render_to_response``` permite que una función de vista envíe a un cliewnte un documento creado a partir de una plantilla y un contexto específico:\n",
+    "La función ```django.shortcuts.render``` permite que una función de vista envíe a un cliewnte un documento creado a partir de una plantilla y un contexto específico:\n",
     "\n",
     "``` python\n",
-    "render_to_response(<plantilla>, context=<contexto>, content_type=<tipo de contenido>, status=<estado>)\n",
+    "render(request, <plantilla>, context=<contexto>)\n",
     "```\n",
     "Donde:\n",
     "\n",
@@ -503,7 +503,8 @@
     "\n",
     "``` python \n",
     "def saluda(request, nombre):\n",
-    "    return render_to_response('ejemplo.html', {titulo:\"Prueba de plantilla\", nombre: nombre})\n",
+    "    contexto = {titulo:\"Prueba de plantilla\", nombre: nombre}\n",
+    "    return render(request, 'ejemplo.html', contexto)\n",
     "```\n",
     "\n",
     "Esta función realizará lo siguiente: \n",
@@ -585,7 +586,7 @@
     "\n",
     "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
     "\n",
-    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
+    "* Asegúrese que no haya otro servicio escuchando en el puerto *8000*."
    ]
   },
   {
@@ -594,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python manage.py runserver 0.0.0.0:5000"
+    "!python manage.py runserver 0.0.0.0:8000"
    ]
   },
   {
@@ -634,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
