--- a/18_lenguaje_de_plantillas_de_django.ipynb
+++ b/18_lenguaje_de_plantillas_de_django.ipynb
@@ -61,8 +61,6 @@
     "Una expresión debe de implicar al menos un elemento que será convertido en una cadena de caracteres. Este elemento puede ser:\n",
     "\n",
     "* Un objeto de Python ligado a un nombre.\n",
-    "* Un atributo de un objeto de Python.\n",
-    "* El resultado de la ejecuciónde un método de un objeto de Python.\n",
     "\n",
     "### Filtros.\n",
     "\n",
@@ -345,7 +343,7 @@
     "```\n",
     "Definiendo las URLs:\n",
     "\n",
-    "* ```api/vista/```, ligada a la función ```template_views.vista()``.\n",
+    "* ```api/vista/```, ligada a la función ```template_views.vista()```.\n",
     "* ```api/valida/```, ligada a la función ```template_views.valida()```."
    ]
   },
@@ -409,17 +407,19 @@
     "\n",
     "``` python\n",
     "from .models import Alumno\n",
-    "from django.shortcuts import render_to_response\n",
+    "from django.shortcuts import render\n",
     "\n",
     "campos = ('numero_de_cuenta', 'nombre', 'primer_apellido', 'segundo_apellido', 'carrera', 'semestre', 'promedio', 'al_corriente')\n",
     "\n",
     "def vista(request):\n",
     "    lista = [[(campo, getattr(alumno, campo)) for campo in campos] for alumno in Alumno.objects.all()]\n",
-    "    return render_to_response('listado.html',{'lista': lista}) \n",
+    "    contexto = {'lista': lista}\n",
+    "    return render(request, 'listado.html', contexto) \n",
     "\n",
     "def valida(request):\n",
     "    lista = [[getattr(alumno, campo) for campo in campos] for alumno in Alumno.objects.all()]\n",
-    "    return render_to_response('valida.html',{'lista': lista}) \n",
+    "    contexto = {'lista': lista}\n",
+    "    return render(request, 'valida.html', contexto) \n",
     "```\n",
     "\n",
     "* La función ```vista()``` hace lo siguiente:\n",
@@ -729,7 +729,7 @@
    },
    "outputs": [],
    "source": [
-    "!./manage.py runserver 0.0.0.0:5000"
+    "!./manage.py runserver 0.0.0.0:8000"
    ]
   },
   {
@@ -768,7 +768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
