--- a/20_contenido_estatico.ipynb
+++ b/20_contenido_estatico.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "*Django* es un servidor de aplicaciones web que permite crear contenido de forma dinámica. Utilizarlo como un servidor web dedicado como lo son el servidor [*Apache*](https://httpd.apache.org/) y [*Nginx*](https://nginx.org) no sólo es ineficiente, sino que incluso podría representar un riesgo de seguridad.\n",
     "\n",
-    "Es posible consultar un pequeño tutorial sobre cómo publicar contenido estático desde un servidor web dedicado en https://docs.djangoproject.com/en/2.2/howto/static-files/deployment/#serving-static-files-from-a-dedicated-server."
+    "Es posible consultar un pequeño tutorial sobre cómo publicar contenido estático desde un servidor web dedicado en https://docs.djangoproject.com/en/3.0/howto/static-files/deployment/#serving-static-files-from-a-dedicated-server."
    ]
   },
   {
@@ -116,7 +116,7 @@
     "\n",
     "El argumento ```--noinput``` permite realizar la operación descrita sin que sea necesario interactuar con el usuario.\n",
     "\n",
-    "La referencia completa puede ser encontrada en https://docs.djangoproject.com/en/2.2/ref/contrib/staticfiles/#django-admin-collectstatic."
+    "La referencia completa puede ser encontrada en https://docs.djangoproject.com/en/3.0/ref/contrib/staticfiles/#django-admin-collectstatic."
    ]
   },
   {
@@ -138,7 +138,7 @@
     "\n",
     "El archivo ```settings.py``` de un proyecto de *Django* permite definir ciertas variables para el manejo de archivos estáticos.\n",
     "\n",
-    "La referencia de estas variables puede ser consultada  en https://docs.djangoproject.com/en/2.2/ref/settings/#static-files."
+    "La referencia de estas variables puede ser consultada  en https://docs.djangoproject.com/en/3.0/ref/settings/#static-files."
    ]
   },
   {
@@ -149,7 +149,7 @@
     "\n",
     "Esta variable indica la *URL* del servidor local que estará siriviendo el contenido estático. Por defecto el valor de la variable es ```'/static/'```.\n",
     "\n",
-    "Es importante que *Django* cuente con las credenciales y permisos para acceder a los recursos de esta URL."
+    "Es importante que *Django* cuente con las credenciales y permisos para acceder a los recursos de esta *URL*."
    ]
   },
   {
@@ -184,7 +184,7 @@
     "\n",
     "La variable ```settings.STATICFILES_STORAGE``` permite definir el recurso en la nube en el cual se almacenará el contenido estático.\n",
     "\n",
-    "Es posible consultar un pequeño ejemplo de conexiones de almacenamiento para contenido estártico en https://docs.djangoproject.com/en/2.2/howto/static-files/deployment/#staticfiles-from-cdn."
+    "Es posible consultar un pequeño ejemplo de conexiones de almacenamiento para contenido estártico en https://docs.djangoproject.com/en/3.0/howto/static-files/deployment/#staticfiles-from-cdn."
    ]
   },
   {
@@ -195,7 +195,7 @@
     "\n",
     "Esta variable define una lista de las herramientas de *Django* que son capaces de buscar contenido estático.\n",
     "\n",
-    "Las herramientas predefinidas en una instalación de Django son:\n",
+    "Las herramientas predefinidas en una instalación de *Django* son:\n",
     "\n",
     "* ```'django.contrib.staticfiles.finders.FileSystemFinder'```.\n",
     "* ```'django.contrib.staticfiles.finders.AppDirectoriesFinder'```.\n",
@@ -454,15 +454,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cp -r src/19/js tutorial/api/static/"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -538,7 +529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La plantilla *base.html*.\n",
+    "### La plantilla ```base.html```.\n",
     "\n",
     "La plantilla localizada en ```src/19/base.html``` contiene el siguiente código en el que se carga la biblioteca ```static``` y se hace referencia a *boostrap.min.css* y a la imagen ```pythonista.png```.\n",
     "\n",
@@ -571,7 +562,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se copiará el archivo  *src/20/base.html* al directorio *tutorial/templates/*."
+    "* A continuación se copiará el archivo  ```src/20/base.html``` al directorio ```tutorial/templates/```."
    ]
   },
   {
@@ -627,7 +618,7 @@
     "\n",
     "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
     "\n",
-    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
+    "* Asegúrese que no haya otro servicio escuchando en el puerto ```8000```."
    ]
   },
   {
@@ -636,7 +627,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./manage.py runserver 0.0.0.0:5000"
+    "!./manage.py runserver 0.0.0.0:8000"
    ]
   },
   {
@@ -655,7 +646,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
    ]
   }
  ],
@@ -675,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
