--- a/04_mvc_mvt_y_servicios_web.ipynb
+++ b/04_mvc_mvt_y_servicios_web.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El patrón Modelo Vista Controlador (*MVC*).\n",
+    "## El patrón *Modelo-Vista-Controlador* (*MVC*).\n",
     "\n",
     "Este patrón de diseño de aplicaciones web consiste en separar los datos a los que accede una aplicación de las interfaces de dicha aplicación.\n",
     "\n",
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La arquitectura Modelo-Vista-Plantilla (MVT). "
+    "## La arquitectura *Modelo-Vista-Plantilla* (*MVT*). "
    ]
   },
   {
@@ -83,35 +83,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aplicación web y servicios web.\n",
-    "\n",
-    "### Aplicación web (\"web app\").\n",
-    "\n",
-    "Una aplicación web por lo general está enfocada a realizar transacciones que son accesibles a un usuario final mediante la la interfaz de un navegador web. Esta interfaz, también conocida como \"front-end\" es el medio de interacción entre el usuario y dicha aplicación.\n",
-    "\n",
-    "### Servicios web (\"web services\").\n",
-    "\n",
-    "Un servicio web está enfocado a la realización de transacciones en la que el énfasis se hace en el intercambio de datos entre el cliente y el servidor mediante al acceso a \"endpoints\".\n",
-    "\n",
-    "#### Puntos de acceso (\"endpoints\").\n",
-    "\n",
-    "Un \"endpoint\"  es una *URL* que expone un servicio web, dicho srvicio puede ser consumido por un cliente (no necesariamente un navegador web) en caso de que cuente con la identidad y los permisos correctos.\n",
-    "\n",
-    "\n",
-    "### Interfaces de programación de aplicaciones (API).\n",
-    "\n",
-    "Las API son un conjunto de endpoints que exponen diversas funcionalidades de un servicio web, las cuales pueden ser utilizadas para el desarrollo de aplicaciones web.\n",
-    "\n",
-    "### Aplicaciones web desde el front-end.\n",
-    "\n",
-    "\n"
+    "## Aplicaciones web y servicios web."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## *SOAP*."
+    "### Aplicación web (\"web app\").\n",
+    "\n",
+    "Una aplicación web por lo general está enfocada a realizar transacciones que son accesibles a un usuario final mediante la la interfaz de un navegador web. Esta interfaz, también conocida como \"front-end\" es el medio de interacción entre el usuario y dicha aplicación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Servicios web (\"web services\").\n",
+    "\n",
+    "Un servicio web está enfocado a la realización de transacciones en la que el énfasis se hace en el intercambio de datos entre el cliente y el servidor mediante al acceso a \"endpoints\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Puntos de acceso (\"endpoints\").\n",
+    "\n",
+    "Un \"endpoint\"  es una *URL* que expone un servicio web, dicho srvicio puede ser consumido por un cliente (no necesariamente un navegador web) en caso de que cuente con la identidad y los permisos correctos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interfaces de programación de aplicaciones (API).\n",
+    "\n",
+    "Las API son un conjunto de endpoints que exponen diversas funcionalidades de un servicio web, las cuales pueden ser utilizadas para el desarrollo de aplicaciones web."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aplicaciones web desde el front-end.\n",
+    " \n",
+    "Debido a la rápida evolución de herramientas y franeworks basados primordialmente en Javascript, se ha podido aprovechar al navegador como una plataforma para desarollo de aplicaciones. A este tipo de aplicaciones se les conoce como \"front-end\".\n",
+    " \n",
+    "Las aplicaciones de front-end son capaces de consumir servicios web directamente desde el navegador enviando peticiones al servidor o \"back-end\" mediante el acceso a las API."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *SOAP*.\n",
+    "\n",
+    "El *Protocolo de Acceso a Objetos Simples* ([*SOAP*](https://es.wikipedia.org/wiki/Simple_Object_Access_Protocol*SOAP*) por sus siglas en inglés) es un protocolo que define una arquitectura de servicios web basada principalment en [*AJAX*](https://es.wikipedia.org/wiki/AJAX).\n",
+    "\n",
+    "*SOAP* es "
    ]
   },
   {
@@ -133,7 +163,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
    ]
   }
  ],
@@ -153,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
