--- a/14_creacion_de_una_api_rest.ipynb
+++ b/14_creacion_de_una_api_rest.ipynb
@@ -440,7 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pycat api\\urls.py"
+    "%pycat api/urls.py"
    ]
   },
   {
@@ -664,7 +664,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
