--- a/19_gestion_de_formularios.ipynb
+++ b/19_gestion_de_formularios.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://docs.djangoproject.com/en/2.2/topics/forms/"
+    "https://docs.djangoproject.com/en/3.0/topics/forms/"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "source": [
     "## El módulo ```django.forms``` .\n",
     "\n",
-    "El módulo ```django.forms```` contiene una biblioteca de elementos que permiten generar diversos tipos de formularios."
+    "El módulo ```django.forms``` contiene una biblioteca de elementos que permiten generar diversos tipos de formularios."
    ]
   },
   {
@@ -107,7 +107,7 @@
     "\n",
     "\n",
     "```\n",
-    "<clase de formulario>(Form):\n",
+    "<Clase>(Form):\n",
     "    <campo 1> = <tipo de campo>(kwargs)\n",
     "    <campo 2> = <tipo de campo>(kwargs)\n",
     "    ...\n",
@@ -117,7 +117,7 @@
     "\n",
     "Para mayor referencia sobre esta clase  se puede consultar la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/forms/api/#django.forms.Form"
+    "https://docs.djangoproject.com/en/3.0/ref/forms/api/#django.forms.Form"
    ]
   },
   {
@@ -129,7 +129,7 @@
     "Esta clase crea objetos a partir de un modelos similares a los definidos con ```dango.db.models.Model```, de tal forma que los datos son guardados como el estado de un modelo.\n",
     "\n",
     "```\n",
-    "<clase de formulario>(ModelForm):\n",
+    "<Clase>(ModelForm):\n",
     "    <campo 1> = <tipo de campo>(kwargs)\n",
     "    <campo 2> = <tipo de campo>(kwargs)\n",
     "    ...\n",
@@ -139,7 +139,7 @@
     "\n",
     "Para mayor referencia sobre esta clase se puede consultar la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/topics/forms/modelforms/#django.forms.ModelForm"
+    "https://docs.djangoproject.com/en/3.0/topics/forms/modelforms/#django.forms.ModelForm"
    ]
   },
   {
@@ -154,7 +154,7 @@
     "\n",
     "Para mayor referencia sobre esta clase se puede consultar la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/forms/fields/#built-in-field-classes\n",
+    "https://docs.djangoproject.com/en/3.0/ref/forms/fields/#built-in-field-classes\n",
     "\n",
     "Cada uno de los campos tiene un \"widget por defecto\". "
    ]
@@ -165,11 +165,11 @@
    "source": [
     "## Los \"widgets\" de los campos.\n",
     "\n",
-    "Los widgets son porciones de código HTML que despliegan un campo de un a forma particular. \n",
+    "Los widgets son porciones de código HTML que despliegan un campo de una forma particular. \n",
     "\n",
     "La clase base de los widgets es ```django.forms.Widget```. A partir de esta clase se han desarrollado diversos tipos de widgets.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/forms/widgets/#widget\n",
+    "https://docs.djangoproject.com/en/3.0/ref/forms/widgets/#widget\n",
     "\n",
     "\n",
     "## Tipos de widgets.\n",
@@ -188,13 +188,13 @@
     "\n",
     "En la siguiente liga está disponible una relación de widgets de *Django.*\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/forms/widgets/#built-in-widgets\n",
+    "https://docs.djangoproject.com/en/3.0/ref/forms/widgets/#built-in-widgets\n",
     "\n",
     "\n",
-    "Para mayor referencia peude consultar la siguiente liga:\n",
+    "Para mayor referencia puede consultar la siguiente liga:\n",
     "\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/forms/widgets/"
+    "https://docs.djangoproject.com/en/3.0/ref/forms/widgets/"
    ]
   },
   {
@@ -216,12 +216,12 @@
     "\n",
     "Para conocer el listado de validaddores disponibles puede consultar la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/validators/#built-in-validators\n",
+    "https://docs.djangoproject.com/en/3.0/ref/validators/#built-in-validators\n",
     "\n",
     "\n",
-    "Para mayor referecnia peude consultar la siguiente liga:\n",
+    "Para mayor referencia peude consultar la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/validators/"
+    "https://docs.djangoproject.com/en/3.0/ref/validators/"
    ]
   },
   {
@@ -267,7 +267,7 @@
     "Cuando se incluye ```{% csrf_token %}``` en un formulario, se crea un elemento ```<input>``` que es invisible al usuario, el caual tiene como nombre de atributo ```csrfmiddlewaretoken ```.\n",
     "\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/csrf/"
+    "https://docs.djangoproject.com/en/3.0/ref/csrf/"
    ]
   },
   {
@@ -282,7 +282,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "settings.MIDDLEWARE"
@@ -475,7 +477,7 @@
     "from .models import Alumno\n",
     "from .forms import FormaAlumno\n",
     "from django.http import HttpResponseRedirect, HttpResponse, JsonResponse\n",
-    "from django.shortcuts import render, render_to_response\n",
+    "from django.shortcuts import render\n",
     "from requests import post\n",
     "\n",
     "campos = ('numero_de_cuenta', 'nombre', 'primer_apellido', 'segundo_apellido', 'carrera', 'semestre', 'promedio', 'al_corriente')\n",
@@ -483,12 +485,12 @@
     "\n",
     "def vista(request):\n",
     "    lista = [[(campo, getattr(alumno, campo)) for campo in campos] for alumno in Alumno.objects.all()]\n",
-    "    return render_to_response('listado.html',{'lista': lista}) \n",
+    "    return render(request, 'listado.html', {'lista': lista}) \n",
     "\n",
     "\n",
     "def valida(request):\n",
     "    lista = [[getattr(alumno, campo) for campo in campos] for alumno in Alumno.objects.all()]\n",
-    "    return render_to_response('valida.html',{'lista': lista}) \n",
+    "    return render(request, 'valida.html', {'lista': lista}) \n",
     "\n",
     "def forma(request):\n",
     "    if request.method == 'POST':\n",
@@ -505,11 +507,10 @@
     "            if resultado.status_code == 200:\n",
     "                return HttpResponse('<h1>¡Alta Exitosa!</h1>')    \n",
     "            else: \n",
-    "                return HttpResponse('<h1>Ocurrió un error en el alta.</h1>'         \n",
+    "                return HttpResponse('<h1>Ocurrió un error en el alta.</h1>')\n",
     "    else:\n",
     "        forma = FormaAlumno()\n",
-    "\n",
-    "    return render(request, 'forma.html', {'forma': forma}) \n",
+    "    return render(request, 'forma.html', {'forma': forma})\n",
     "```"
    ]
   },
@@ -643,7 +644,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
    ]
   }
  ],
@@ -663,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
